<?xml version="1.0" encoding="UTF-8"?>
<project
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
  xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.jboss.qa</groupId>
  <artifactId>arquillian-plus-byteman-test</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <properties>
    <version.junit>4.11</version.junit>
    <version.arquillian_core>1.1.1.Final</version.arquillian_core>
    <version.jboss.javaee>3.0.2.Final</version.jboss.javaee>
    <version.jbossas.testsuite>7.2.0.Final</version.jbossas.testsuite>
    <version.byteman>2.1.3</version.byteman>

    <jboss.home>${env.JBOSS_HOME}</jboss.home>
    <server.config>standalone.xml</server.config>

    <jvm.args.ip>-Djava.net.preferIPv4Stack=true
      -Djava.net.preferIPv6Addresses=false</jvm.args.ip>
    <jvm.args.memory>-Xms64m -Xmx1024m -XX:MaxPermSize=512m</jvm.args.memory>
    <jvm.args.debug></jvm.args.debug>

    <byteman.home>${project.build.directory}/byteman</byteman.home>
    <jvm.args.byteman>-Dorg.jboss.byteman.verbose -Dorg.jboss.byteman.debug=true
      -Djboss.modules.system.pkgs=org.jboss.byteman
      -Dorg.jboss.byteman.transform.all
      -javaagent:${byteman.home}/byteman.jar=script:${project.build.directory}/test-classes/byteman-script.btm,boot:${byteman.home}/byteman.jar,listener:true
    </jvm.args.byteman>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.jboss.arquillian</groupId>
        <artifactId>arquillian-bom</artifactId>
        <version>${version.arquillian_core}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.jboss.spec</groupId>
        <artifactId>jboss-javaee-6.0</artifactId>
        <version>${version.jboss.javaee}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${version.junit}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.arquillian.junit</groupId>
      <artifactId>arquillian-junit-container</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.spec.javax.ejb</groupId>
      <artifactId>jboss-ejb-api_3.1_spec</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>javax.enterprise</groupId>
      <artifactId>cdi-api</artifactId>
      <scope>provided</scope>
    </dependency>

    <!-- org.jboss.as.test.shared.integration.ejb.security.Util -->
    <dependency>
      <groupId>org.jboss.as</groupId>
      <artifactId>jboss-as-testsuite-shared</artifactId>
      <version>${version.jbossas.testsuite}</version>
    </dependency>
    
  </dependencies>

  <repositories>
    <repository>
      <id>JBOSS_NEXUS</id>
      <url>http://repository.jboss.org/nexus/content/groups/public</url>
    </repository>
  </repositories>

  <build>
    <finalName>arquillian-jboss-module-path</finalName>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>

      <!-- Getting the byteman library to target directory -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <id>jbossts-byteman.copy</id>
            <phase>process-test-resources</phase>
            <goals>
              <goal>copy</goal>
            </goals>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>org.jboss.byteman</groupId>
                  <artifactId>byteman</artifactId>
                  <version>${version.byteman}</version>
                </artifactItem>
                <artifactItem>
                  <groupId>org.jboss.byteman</groupId>
                  <artifactId>byteman-dtest</artifactId>
                  <version>${version.byteman}</version>
                </artifactItem>
              </artifactItems>
              <outputDirectory>${byteman.home}</outputDirectory>
              <stripVersion>true</stripVersion>
            </configuration>
          </execution>
        </executions>
      </plugin>

    </plugins>
  </build>

  <profiles>
    <profile>
      <id>arq-jboss_as_managed_7.x</id>
      <activation>
        <property>
          <name>!no.arq</name>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.14.1</version>
            <configuration>
              <systemPropertyVariables>
                <arquillian.launch>jbossas</arquillian.launch>
                <jboss.home>${jboss.home}</jboss.home>
                <server.jvm.args>${jvm.args.memory} ${jvm.args.byteman} ${jvm.args.ip} ${jvm.args.debug}</server.jvm.args>
                <node.address>127.0.0.1</node.address>
                <server.config>${server.config}</server.config>
              </systemPropertyVariables>
            </configuration>
          </plugin>
        </plugins>
      </build>
      <dependencies>
        <dependency>
          <groupId>org.jboss.as</groupId>
          <artifactId>jboss-as-arquillian-container-managed</artifactId>
          <version>${version.jbossas.testsuite}</version>
        </dependency>
      </dependencies>
    </profile>
    
    <profile>
      <id>debug</id>
      <activation>
        <property>
          <name>debug</name>
        </property>
      </activation>
      <properties>
        <jvm.args.debug>-Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=y</jvm.args.debug>
      </properties>
    </profile>
  </profiles>

</project>
